# mcp-knowledge-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: knowledge.json
examples/: demo_local.py  demo_protocol.py
knowledge_docs/: agent-mcp.md  eval-checklist.md
mcp_bridge/: client.py  http_server.py  kb.py  server.py  tools.py
tests/: test_client.py  test_client_tools.py  test_http_server.py  test_protocol.py  test_server.py
